<resources>
    <string name="app_name">Nuntium</string>
    <string name="first_to_know">First to know</string>
    <string name="all_news_in_one_place_be_the_first_to_know_last_news">All news in one place, be the first to know last news</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="i_am_happy_to_see_you_again_you_can_continue_where_you_left_off_by_logging_in">I am happy to see you again. You can continue where you left off by logging in</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="forgot_password_screen">Forgot Password 🤔</string>
    <string name="we_need_your_email_adress_so_we_can_send_you_the_password_reset_code">We need your email adress so we can send you the password reset code.</string>
    <string name="remember_the_password">Remember the password?</string>
    <string name="try_again">Try again</string>
    <string name="verification_code">Verification Code ✅</string>
    <string name="you_need_to_enter_4_digit_code_we_send_to_your_email_address">You need to enter 4-digit code we send to your email address.</string>
    <string name="didn_t_receive_an_email">Didn\'t receive an email?</string>
    <string name="send_again">Send again</string>
    <string name="you_can_create_a_new_password_please_dont_forget_it_too">You can create a new password, please dont forget it too.</string>
    <string name="create_new_password">Create New Password 🔒</string>
    <string name="new_password_hint">New Password</string>
    <string name="repeat_new_password_hint">Repeat New Password</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_to_nuntium">Welcome to Nuntium 👋</string>
    <string name="hello_i_guess_you_are_new_around_here_you_can_start_using_the_application_after_sign_up">Hello, I guess you are new around here. You can start using the application after sign up.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_your_favorite_topics">Select your favorite topics</string>
    <string name="select_some_of_your_favorite_topics_to_let_us_suggest_better_news_for_you">Select some of your favorite topics to let us suggest better news for you.</string>
    <string name="sports">🏈 Sports</string>
    <string name="politics">⚖️ Politics</string>
    <string name="life">🌞 Life</string>
    <string name="username_edit_text_hint">Username</string>
    <string name="browse_text_view">Browse</string>
    <string name="discover_things_of_this_world">Discover things of this world</string>
    <string name="search_string_text">Search</string>
    <string name="random">Random</string>
    <string name="sports_news_button">Sports</string>
    <string name="gaming_news">Gaming</string>
    <string name="politics_news">Politics</string>
    <string name="a_simple_trick_for_creating_color_palettes_quickly">A Simple Trick For Creating Color Palettes Quickly</string>
    <string name="title_activity_navb">navb</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="onboarding_center_image">onboarding center image</string>
    <string name="us_election">US Election</string>
    <string name="the_latest_situation_in_the_presidential_election">The latest situation in the presidential election</string>
    <string name="john_doe">John Doe</string>
    <string name="designer">Designer</string>
    <string name="results">Results</string>
    <string name="new_article_text">Leads in individual states may change from one party to another as all the votes are counted. Select a state for detailed results, and select the Senate, House or Governor tabs to view those races. For more detailed state results click on the States A-Z links at the bottom of this page. Results source: NEP/Edison via Reuters. Leads in individual states may change from one party to another as all the votes are counted. Select a state for detailed results, and select the Senate, House or Governor tabs to view those races. For more detailed state results click on the States A-Z links at the bottom of this page. Results source: NEP/Edison via Reuters.</string>
    <string name="api_key">7c999e7db25f4894b27af4a416401509</string>
    <string name="life_news">Life</string>
    <string name="animals_news">Animals</string>
    <string name="nature_news">Nature</string>
    <string name="food_news">Food</string>
    <string name="art_news">Art</string>
    <string name="history_news">History</string>
    <string name="fashion_news">Fashion</string>

</resources>