<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_new_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_password"
            android:fontFamily="@font/sfsemibold"
            android:textSize="24sp"
            android:textColor="@color/black_primary"
            android:layout_marginTop="72dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:fontFamily="@font/sfregular"
            android:textColor="@color/gray_primary"
            android:textSize="16sp"
            android:text="@string/you_can_create_a_new_password_please_dont_forget_it_too"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/newTextPassword"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="24dp"
            android:ems="10"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="24dp" />

        <EditText
            android:id="@+id/repeatnewTextPassword"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="24dp"
            android:ems="10"
            android:hint="@string/repeat_new_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="24dp" />

        <Button
            android:id="@+id/create_new_password_button"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/roundshapebutton"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="49dp"
            android:layout_marginTop="346dp"
            >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfmedium"
                android:text="@string/didn_t_receive_an_email"
                android:textColor="@color/black_lighter"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sfmedium"
                android:text="@string/send_again"
                android:textColor="@color/black_primary"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>