<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_Password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="126dp"
            android:fontFamily="@font/sfsemibold"
            android:lineHeight="32dp"
            android:text="@string/forgot_password_screen"
            android:textColor="@color/black_primary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="19dp"
            android:text="@string/we_need_your_email_adress_so_we_can_send_you_the_password_reset_code"

            />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/envelope"
            android:drawablePadding="24dp"
            android:ems="10"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="24dp" />

        <Button
            android:id="@+id/signinbutton"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/roundshapebutton"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="276dp"
            android:layout_height="32dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="418dp"
            android:layout_marginEnd="65dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfmedium"
                android:text="@string/remember_the_password"
                android:textColor="@color/black_lighter"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sfmedium"
                android:text="@string/try_again"
                android:textColor="@color/black_primary"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>