<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_nuntium"
            android:fontFamily="@font/sfsemibold"
            android:textSize="24sp"
            android:textColor="@color/black_primary"
            android:layout_marginTop="72dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="19dp"
            />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:text="@string/hello_i_guess_you_are_new_around_here_you_can_start_using_the_application_after_sign_up"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/sfregular"
            android:textSize="16sp"
            android:textColor="@color/gray_primary"
            />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="19dp"
            android:ems="10"
            android:inputType="text"
            android:background="@drawable/rounded_corner_view"
            android:text=""
            android:drawableStart="@drawable/user"
            android:drawablePadding="24dp"
            android:hint="Username"
            android:paddingLeft="24dp"
            />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/envelope"
            android:drawablePadding="24dp"
            android:ems="10"
            android:hint="@string/email_address_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="24dp" />

        <EditText
            android:id="@+id/newTextPassword"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="24dp"
            android:ems="10"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="24dp" />

        <EditText
            android:id="@+id/repeatnewTextPassword"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="24dp"
            android:ems="10"
            android:hint="@string/repeat_new_password_hint"
            android:inputType="textPassword"
            android:paddingLeft="24dp" />

        <Button
            android:id="@+id/create_new_password_button"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/roundshapebutton"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="49dp"
            android:layout_marginTop="202dp"
            >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfmedium"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black_lighter"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sfmedium"
                android:text="@string/sign_in"
                android:textColor="@color/black_primary"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>