<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="8dp"
        >

        <ImageView
            android:id="@+id/welcomebackimg"
            android:layout_width="216dp"
            android:layout_height="32dp"

            android:layout_marginEnd="139dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/welcomeback" />

        <TextView
            android:id="@+id/welcomebacktxt"
            android:layout_width="336dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sfregular"
            android:text="@string/i_am_happy_to_see_you_again_you_can_continue_where_you_left_off_by_logging_in"
            android:textColor="@color/gray_primary"
            android:textSize="16sp"
            android:layout_below="@id/welcomebackimg"/>

        <EditText
            android:id="@+id/sign_in_editTextTextEmailAddress"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/envelope"
            android:drawablePadding="24dp"
            android:ems="10"
            android:hint="@string/email_address_hint"
            android:textColorHint="@color/gray_primary"
            android:inputType="textEmailAddress"
            android:paddingStart="24dp"
            android:layout_below="@id/welcomebacktxt"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_view"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="24dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:textColorHint="@color/gray_primary"
            android:inputType="textPassword"
            android:paddingStart="24dp"
            android:layout_below="@id/sign_in_editTextTextEmailAddress"/>

        <TextView
            android:id="@+id/forgot_password_clickable_txt"
            android:layout_width="138dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="158dp"
            android:clickable="true"

            android:gravity="center_horizontal"
            android:textColor="@color/gray_primary"
            android:fontFamily="@font/sfmedium"
            android:text="@string/forgot_password"
            android:layout_below="@id/editTextTextPassword"/>

        <Button
            android:id="@+id/signinbutton"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/roundshapebutton"
            android:text="@string/sign_in"
            android:layout_below="@id/forgot_password_clickable_txt"/>

        <TextView
            android:id="@+id/or_txt_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="139dp"
            android:text="@string/or"
            android:fontFamily="@font/sfsemibold"
            android:textSize="16sp"
            android:textColor="@color/gray_primary"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_below="@id/signinbutton"
            />

        <Button
            android:id="@+id/signinwithgooglebutton"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:background="@drawable/round_corner_view_button"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/gray_darker"
            android:layout_marginTop="48dp"
            android:textAllCaps="false"
            android:drawableStart="@drawable/google_button_drawable"
            android:paddingStart="12sp"
            android:paddingEnd="72dp"
            android:drawablePadding="19sp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/or_txt_view"
           />

        <Button
            android:id="@+id/signinwithfacebookbutton"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:background="@drawable/round_corner_view_button"
            android:text="@string/sign_in_with_facebook"
            android:textColor="@color/gray_darker"
            android:layout_marginTop="16sp"
            android:drawablePadding="19sp"
            android:textAllCaps="false"
            android:drawableStart="@drawable/facebook_button_drawable"
            android:paddingStart="16sp"
            android:paddingEnd="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/signinwithgooglebutton"
            />

        <LinearLayout
            android:layout_width="245dp"
            android:layout_height="32dp"
            android:orientation="horizontal"
            android:layout_marginStart="65dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="65dp"
            android:textAlignment="center"
            android:layout_below="@id/signinwithfacebookbutton">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfmedium"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textSize="16sp"
                android:textColor="@color/black_lighter"

                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sfmedium"
                android:text="Sign up"
                android:textSize="16sp"
                android:textColor="@color/black_primary"
                />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>